# supernovas

./: .clang-format  .clang-tidy  .cspell.json  .gitignore  .markdownlint.yaml  .prettierignore  CMakeLists.txt  README.md  readme.md
.github/workflows/: build.yaml  code_quality.yml  learn-github-actions.yml  static_analysis.yaml
cmake/: SupernovasOptions.cmake
supernovas/: CMakeLists.txt
supernovas/supernovas/: constants.h  julian_date.h  julian_date_old.h
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  dummy.cpp
unit_tests/: CMakeLists.txt  julian_date_test.cpp
